welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: type Bolean
	var vert:Bolean=false
                 ^SlugTracking:5: error: not found: value getColorSol
	if (getColorSol()=Color.green) {
            ^