welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var vert:Bolean=false
	avance()
	if (getColorSol()=Color.green) {
		avance()
	} else {
		gauche()
		avance()
	}
	return vert; 
    // Write your code here
}        
